@@ -13,6 +13,9 @@ Revision history for Perl extension Module::Build.
 
  Bug fixes:
 
+ - Auto-detection of abstract and author fixed for mixed-case POD headers
+   (RT#51117) [David Wheeler]
+
  - resume() was not restoring additions to @INC added in Build.PL
    (RT#50145) [David Golden]
 
